--- a/templates/addTask_template.html
+++ b/templates/addTask_template.html
@@ -24,7 +24,8 @@
         <div onclick="resetFormTaskPopUp(), closeTaskPopUp()" class="task-popUp-back-container">
             <img src="img/back.svg">
         </div>
-        <form onsubmit="event.preventDefault(); createTask()" class="TaskFormPopUp" id="add-new-task" method="dialog">
+        <form onsubmit="event.preventDefault(); createTask(), resetFormTaskPopUp()" class="TaskFormPopUp"
+            id="add-new-task" method="dialog">
 
 
             <div class="container">
@@ -122,7 +123,8 @@
             <div id="addSubtaskContainer" class="subtask-container"></div>
 
             <div class="create-task-button-popUp">
-                <button type="submit" class="create-task-btn" id="creatTaskBtn">Create Task <img src="img/addTask-right.svg"></button>
+                <button type="submit" class="create-task-btn" id="creatTaskBtn">Create Task <img
+                        src="img/addTask-right.svg"></button>
 
             </div>
         </form>
